--- a/web/index.html
+++ b/web/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="src/assets/main.css">
-    <title>Test</title>
+    <title>Alejandro Garcia Sanz</title>
   </head>
   <body>
     <div id="app"></div>
